# foamio

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
addons/Make/: options
addons/applications/utilities/mesh/manipulation/wedgeMesh/: wedgeMesh.C
addons/etc/: visualise.py
addons/etc/caseDicts/postProcessing/fields/: compressibilityMachNo
addons/meshTools/searchableSurfaces/searchableCone/: searchableCone.C  searchableCone.H
addons/src/Make/: files
examples/addons/searchableCone/: Allrun  run.py
examples/addons/searchableCone/system/: blockMeshDict  snappyHexMeshDict
examples/addons/wedgeMesh/: Allrun  run.py
examples/lidDrivenCavity/: .gitignore  Allrun
examples/lidDrivenCavity/0/: U.orig  p.orig
examples/lidDrivenCavity/constant/: momentumTransport  transportProperties
examples/lidDrivenCavity/system/: blockMeshDict  controlDict  fvSchemes  fvSolution
foam2py/: __init__.py  __version__.py  core.py  helpers.py  readers.py
foamio/: __about__.py  __init__.py  _common.py  _helpers.py
foamio/_cli/: __init__.py  _clean.py  _convert.py  _describe.py  _generate.py  _main.py  _plot.py  _serialise.py  _tabulate.py  _wrap.py
foamio/dat/: __init__.py  _dat.py
foamio/foam/: _Caller.py  __init__.py  _foam.py
foamio/gridpro/: __init__.py  _helpers.py  _mesh.py  _properties.py  _topology.py
pandasfoam/: __version__.py  helpers.py
