[project]
name = "foamio"
version = "0.7.3"
description = "OpenFOAM Python CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
  "mesh", "file formats", "scientific", "engineering", "finite volume method", "OpenFOAM"]
authors = [
  {name = "Stanislau Stasheuski"},
  {email = "stanislau.stasheuski@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities"
]
dependencies = [
  "importlib_metadata; python_version<'3.8'",
  "numpy",
  "pandas",
  "matplotlib",
]

[project.optional-dependencies]
cli = [
  "CoolProp",
]

[project.urls]
homepage = "https://github.com/staneuski/foamio"
code = "https://github.com/staneuski/foamio"
issues = "https://github.com/staneuski/foamio/issues"
funding = "https://github.com/sponsors/staneuski"

[project.entry-points.console_scripts]
foamio = "foamio._cli:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
